TESTS = \
	dekker \
	commands \
	debug \
	renaming \
	dataStructures \
	parameterization \
	unification \
	diophantine

MAUDE_FILES = \
	dekker.maude \
	commands.maude \
	debug.maude \
	renaming.maude \
	dataStructures.maude \
	parameterization.maude \
	unification.maude \
	diophantine.maude


RESULT_FILES = \
	dekker.expected \
	commands.expected \
	debug.expected \
	renaming.expected \
	dataStructures.expected \
	parameterization.expected \
	unification.expected \
	diophantine.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
