TESTS = \
	marc3-17-09 \
	traian8-12-09 \
	adrian8-13-09 \
        santiago9-21-09 \
	paco10-6-09 \
	santiago11-2-09


MAUDE_FILES = \
	marc3-17-09.maude LubMin.maude Pair.maude ErrorRat.maude \
	traian8-12-09.maude \
	adrian8-13-09.maude \
        santiago9-21-09.maude \
	paco10-6-09.maude \
	santiago11-2-09.maude

RESULT_FILES = \
	marc3-17-09.expected \
	traian8-12-09.expected \
	adrian8-13-09.expected \
        santiago9-21-09.expected \
	paco10-6-09.expected \
	santiago11-2-09.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
