TESTS = \
	nim \
	bank-account \
	bakery \
	imp \
    caut

MAUDE_FILES = \
	nim.maude \
	bank-account.maude \
	bakery.maude \
	imp.maude \
    caut.maude

RESULT_FILES = \
	nim.expected \
	bank-account.expected \
	bakery.expected \
	imp.expected \
    caut.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
