TESTS = \
    brp-ltlr \
    client-server \
    context \
    dekker \
    philo-dynamic \
    simple-dp \
    sk2-2 \
    swp \
    unordered-channel

MAUDE_FILES = \
    brp-ltlr.maude \
    client-server.maude \
    context.maude \
    dekker.maude \
    philo-dynamic.maude \
    simple-dp.maude \
    sk2-2.maude \
    swp.maude \
    unordered-channel.maude

RESULT_FILES = \
    brp-ltlr.expected \
    client-server.expected \
    context.expected \
    dekker.expected \
    philo-dynamic.expected \
    simple-dp.expected \
    sk2-2.expected \
    swp.expected \
    unordered-channel.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
