TESTS = \
    bakery \
    dijkstra-mutex \
    rw-shared \
    rw \
    token-mutex \
    vending

MAUDE_FILES = \
    bakery.maude \
    dijkstra-mutex.maude \
    rw-shared.maude \
    rw.maude \
    token-mutex.maude \
    vending.maude

RESULT_FILES = \
    bakery.expected \
    dijkstra-mutex.expected \
    rw-shared.expected \
    rw.expected \
    token-mutex.expected \
    vending.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
