TESTS = \
	metalevel-ext \
	structured-names \
	cterms \
	foform \
	mtemplate \
	mtransform \
	unification \
	variables

MAUDE_FILES = \
	metalevel-ext.maude \
	structured-names.maude \
	cterms.maude \
	foform.maude \
	mtemplate.maude \
	mtransform.maude \
	unification.maude \
	variables.maude

RESULT_FILES = \
	metalevel-ext.expected \
	structured-names.expected \
	cterms.expected \
	foform.expected \
	mtemplate.expected \
	mtransform.expected \
	unification.expected \
	variables.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
