TESTS = \
	structured-names \
	cterms \
	foform \
	mtemplate \
	mtransform \
	unification \
	variables

MAUDE_FILES = \
	structured-names.maude \
	cterms.maude \
	foform.maude \
	mtemplate.maude \
	mtransform.maude \
	unification.maude \
	variables.maude

RESULT_FILES = \
	structured-names.expected \
	cterms.expected \
	foform.expected \
	mtemplate.expected \
	mtransform.expected \
	unification.expected \
	variables.expected

EXTRA_DIST = $(TESTS) $(MAUDE_FILES) $(RESULT_FILES)
